dynamicAnalysis.fxml