@@ -22,7 +22,8 @@ import okhttp3.Response;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.IOException;
-import java.util.Objects;
+import java.util.LinkedList;
+import java.util.List;
 
 public class DynamicAnalysisController {
 
@@ -33,11 +34,17 @@ public class DynamicAnalysisController {
 
     AppController mainAppController;
 
-    private int rowIndex = 1;  // Start after the header row
-
     BooleanProperty showDynamicSheetOperationsProperty;
     IntegerProperty numberOfRowsProperty;
     IntegerProperty numberOfEnableRowsProperty;
+
+    List<ComboBox<String>> cellComboBoxList;
+    List<Spinner<Double>> stepSpinnerList;
+    List<Spinner<Integer>> minSpinnerList;
+    List<Slider> sliderList;
+    List<Spinner<Integer>> maxSpinnerList;
+    List<Button> resetButtonList;
+    List<Button> deleteButtonList;
 
     @FXML
     public void initialize() {
@@ -48,6 +55,14 @@ public class DynamicAnalysisController {
         numberOfRowsProperty = new SimpleIntegerProperty(0);
         numberOfEnableRowsProperty = new SimpleIntegerProperty(0);
         showDynamicSheetOperationsProperty = new SimpleBooleanProperty(true);
+
+        cellComboBoxList = new LinkedList<>();
+        stepSpinnerList = new LinkedList<>();
+        minSpinnerList = new LinkedList<>();
+        sliderList = new LinkedList<>();
+        maxSpinnerList = new LinkedList<>();
+        resetButtonList = new LinkedList<>();
+        deleteButtonList = new LinkedList<>();
 
         numberOfRowsProperty.addListener((observable, oldValue, newValue) -> {
             if (newValue.intValue() == 0) {
@@ -81,8 +96,6 @@ public class DynamicAnalysisController {
         comboBox.setPromptText("Cell");
         setItems(comboBox);
 
-        numberOfRowsProperty.set(numberOfRowsProperty.get() + 1);
-
         Spinner<Double> spinnerStep = new Spinner<>(0.0, 100.0, 1.0);
         spinnerStep.setPrefWidth(60.0);
         spinnerStep.setEditable(true);
@@ -91,7 +104,7 @@ public class DynamicAnalysisController {
         spinnerMin.setPrefWidth(60.0);
         spinnerMin.setEditable(true);
 
-        Slider slider = new Slider(0, 100, 0); // Default to middle
+        Slider slider = new Slider(0, 100, 0);
         slider.setShowTickLabels(true);
         slider.setShowTickMarks(true);
         slider.setSnapToTicks(true);
@@ -102,30 +115,40 @@ public class DynamicAnalysisController {
 
         Button resetButton = new Button("Reset");
         resetButton.setStyle("-fx-text-fill: blue;");
-        resetButton.setOnAction(e -> resetRow(comboBox, spinnerStep, spinnerMin, slider, spinnerMax));
 
         Button deleteButton = new Button("Delete");
         deleteButton.setStyle("-fx-text-fill: red;");
 
-        final int finalRowIndex = rowIndex;
+        final int finalRowIndex = numberOfRowsProperty.get();
 
-        deleteButton.setOnAction(e -> {
-            resetRow(comboBox, spinnerStep, spinnerMin, slider, spinnerMax);
-            removeRow(finalRowIndex);
-        });
+        resetButton.setOnAction(e -> resetRow(finalRowIndex));
+        deleteButton.setOnAction(e -> removeRow(finalRowIndex));
 
         comboBox.valueProperty().addListener((observable, oldValue, newValue) -> {
             if (oldValue == null) {
                 numberOfEnableRowsProperty.set(numberOfEnableRowsProperty.get() + 1);
+            } else {
+                resetRow(finalRowIndex, oldValue);
             }
-            resetRow(comboBox, spinnerStep, spinnerMin, slider, spinnerMax);
+            resetRow(finalRowIndex);
         });
 
-        slider.valueProperty().addListener((observable, oldValue, newValue) -> sliderOnValueChange(newValue, comboBox.getValue(), spinnerStep));
+        slider.valueProperty().addListener((observable, oldValue, newValue) -> updateCellToDynamicSheet(finalRowIndex, newValue));
 
         //init disable property.
         initDisableBind(spinnerStep, comboBox, spinnerMin, spinnerMax, resetButton, deleteButton);
         initSliderValuesBinds(slider, spinnerMin, spinnerMax, spinnerStep);
+
+        // Add to lists
+        cellComboBoxList.add(comboBox);
+        stepSpinnerList.add(spinnerStep);
+        minSpinnerList.add(spinnerMin);
+        sliderList.add(slider);
+        maxSpinnerList.add(spinnerMax);
+        resetButtonList.add(resetButton);
+        deleteButtonList.add(deleteButton);
+
+        numberOfRowsProperty.set(numberOfRowsProperty.get() + 1);
 
         // Add RowConstraints to ensure the row is properly added
         RowConstraints rowConstraints = new RowConstraints();
@@ -133,20 +156,19 @@ public class DynamicAnalysisController {
         mainGridPane.getRowConstraints().add(rowConstraints);
 
         // Add components to the new row in the grid
-        mainGridPane.add(comboBox, 0, finalRowIndex);
-        mainGridPane.add(spinnerStep, 1, finalRowIndex);
-        mainGridPane.add(spinnerMin, 2, finalRowIndex);
-        mainGridPane.add(slider, 3, finalRowIndex);
-        mainGridPane.add(spinnerMax, 4, finalRowIndex);
-        mainGridPane.add(resetButton, 5, finalRowIndex);
-        mainGridPane.add(deleteButton, 6, finalRowIndex);
-
-        rowIndex++; // Move to the next row for future additions
+        mainGridPane.add(comboBox, 0, numberOfRowsProperty.get());
+        mainGridPane.add(spinnerStep, 1, numberOfRowsProperty.get());
+        mainGridPane.add(spinnerMin, 2, numberOfRowsProperty.get());
+        mainGridPane.add(slider, 3, numberOfRowsProperty.get());
+        mainGridPane.add(spinnerMax, 4, numberOfRowsProperty.get());
+        mainGridPane.add(resetButton, 5, numberOfRowsProperty.get());
+        mainGridPane.add(deleteButton, 6, numberOfRowsProperty.get());
     }
 
-    private void sliderOnValueChange(Number newValue, String coordinate, Spinner<Double> spinnerStep) {
+    private void updateCellToDynamicSheet(int targetRowIndex, Number newValue) {
+        String coordinate = cellComboBoxList.get(targetRowIndex).getSelectionModel().selectedItemProperty().get();
         Double staticSheetCellValue = mainAppController.getStaticSheetCellValue(coordinate);
-        Double stepValue = spinnerStep.getValue();
+        Double stepValue = stepSpinnerList.get(targetRowIndex).getValue();
         double mod = staticSheetCellValue - staticSheetCellValue.intValue();
         if (Math.abs(staticSheetCellValue.intValue() % stepValue.intValue()) == Math.abs(newValue.intValue() % stepValue.intValue())) {
             if (mod == 0.0) {
@@ -241,68 +263,88 @@ public class DynamicAnalysisController {
         );
     }
 
-    private void resetRow(ComboBox<String> comboBox, Spinner<Double> spinnerStep, Spinner<Integer> spinnerMin, Slider slider, Spinner<Integer> spinnerMax) {
-        String coordinate = comboBox.getSelectionModel().selectedItemProperty().get();
+    private void resetRow(int targetRowIndex) {
+        String coordinate = cellComboBoxList.get(targetRowIndex).getSelectionModel().selectedItemProperty().get();
         if (coordinate != null) {
             Double value = mainAppController.getStaticSheetCellValue(coordinate);
+            updateCellToDynamicSheet(targetRowIndex, value);
 
-            spinnerStep.getValueFactory().setValue(1.0); // Reset step
-            spinnerMin.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(Integer.MIN_VALUE , Integer.MAX_VALUE, value.intValue() - 100));
-            spinnerMax.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(Integer.MIN_VALUE , Integer.MAX_VALUE, value.intValue() + 100));
+            stepSpinnerList.get(targetRowIndex).getValueFactory().setValue(1.0); // Reset step
+            minSpinnerList.get(targetRowIndex).setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(Integer.MIN_VALUE , Integer.MAX_VALUE, value.intValue() - 100));
+            maxSpinnerList.get(targetRowIndex).setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(Integer.MIN_VALUE , Integer.MAX_VALUE, value.intValue() + 100));
 
-            slider.valueProperty().setValue(value); // Reset slider to middle
+            sliderList.get(targetRowIndex).valueProperty().setValue(value); // Reset slider to middle
         }
     }
 
+    private void resetRow(int targetRowIndex, String previousCoordinate) {
+        if (previousCoordinate != null) {
+            Double previousValue = mainAppController.getStaticSheetCellValue(previousCoordinate);
+            updateCellToDynamicSheet(previousCoordinate, String.valueOf(previousValue));
+        }
+        resetRow(targetRowIndex);
+    }
+
     private void removeRow(int targetRowIndex) {
-        mainGridPane.getChildren().removeIf(node -> {
-            Integer rowIndex = GridPane.getRowIndex(node);
-            return rowIndex != null && rowIndex == targetRowIndex;
-        });
+        // Step 1: Reset the row values (if needed)
+        resetRow(targetRowIndex);
 
-        // Shift rows above the deleted row down by 1
-        for (javafx.scene.Node node : mainGridPane.getChildren()) {
-            Integer rowIndex = GridPane.getRowIndex(node);
-            if (rowIndex != null && rowIndex > targetRowIndex) {
-                GridPane.setRowIndex(node, rowIndex - 1);
+        // Step 2: Remove components for the row from GridPane
+        mainGridPane.getChildren().removeAll(
+                cellComboBoxList.get(targetRowIndex),
+                stepSpinnerList.get(targetRowIndex),
+                minSpinnerList.get(targetRowIndex),
+                sliderList.get(targetRowIndex),
+                maxSpinnerList.get(targetRowIndex),
+                resetButtonList.get(targetRowIndex),
+                deleteButtonList.get(targetRowIndex)
+        );
 
-                if (node instanceof Button && Objects.equals(((Button) node).getText(), "Delete")) {
-                    ((Button) node).setOnAction(e -> removeRow(rowIndex - 1));
-                }
-            }
+        // Step 3: Remove components from each list
+        cellComboBoxList.remove(targetRowIndex);
+        stepSpinnerList.remove(targetRowIndex);
+        minSpinnerList.remove(targetRowIndex);
+        sliderList.remove(targetRowIndex);
+        maxSpinnerList.remove(targetRowIndex);
+        resetButtonList.remove(targetRowIndex);
+        deleteButtonList.remove(targetRowIndex);
+
+        // Step 4: Shift components in rows below the target row up by one
+        for (int i = targetRowIndex; i < cellComboBoxList.size(); i++) {
+            GridPane.setRowIndex(cellComboBoxList.get(i), i + 1);
+            GridPane.setRowIndex(stepSpinnerList.get(i), i + 1);
+            GridPane.setRowIndex(minSpinnerList.get(i), i + 1);
+            GridPane.setRowIndex(sliderList.get(i), i + 1);
+            GridPane.setRowIndex(maxSpinnerList.get(i), i + 1);
+            GridPane.setRowIndex(resetButtonList.get(i), i + 1);
+            GridPane.setRowIndex(deleteButtonList.get(i), i + 1);
+
+            // Update delete button action to match new row index
+            int currentIndex = i; // Capture current index for lambda
+            deleteButtonList.get(i).setOnAction(e -> removeRow(currentIndex));
         }
 
-        mainGridPane.getRowConstraints().removeLast();
-        rowIndex--;
+        // Step 5: Remove last row constraint if necessary
+        if (!mainGridPane.getRowConstraints().isEmpty()) {
+            mainGridPane.getRowConstraints().remove(mainGridPane.getRowConstraints().size() - 1);
+        }
 
+        // Step 6: Update properties
         numberOfRowsProperty.set(numberOfRowsProperty.get() - 1);
         numberOfEnableRowsProperty.set(numberOfEnableRowsProperty.get() - 1);
     }
 
     private void resetAllRows() {
         // Loop through each row and reset values
-        for (int i = 1; i < rowIndex; i++) {
-            ComboBox<String> comboBox = (ComboBox<String>) getNodeByRowColumnIndex(i, 0);
-            Spinner<Double> spinnerStep = (Spinner<Double>) getNodeByRowColumnIndex(i, 1);
-            Spinner<Integer> spinnerMin = (Spinner<Integer>) getNodeByRowColumnIndex(i, 2);
-            Slider slider = (Slider) getNodeByRowColumnIndex(i, 3);
-            Spinner<Integer> spinnerMax = (Spinner<Integer>) getNodeByRowColumnIndex(i, 4);
-            resetRow(comboBox, spinnerStep, spinnerMin, slider, spinnerMax);
+        for (int i = 0; i < numberOfRowsProperty.get(); i++) {
+            resetRow(i);
         }
     }
 
     private void deleteAllRows() {
-        for (int row = mainGridPane.getRowConstraints().size() - 1; row >= 1; row--) {
+        int size = numberOfRowsProperty.get();
+        for (int row = size - 1; row >= 0; row--) {
             removeRow(row);
         }
-    }
-
-    private javafx.scene.Node getNodeByRowColumnIndex(final int row, final int column) {
-        for (javafx.scene.Node node : mainGridPane.getChildren()) {
-            if (GridPane.getRowIndex(node) != null && GridPane.getRowIndex(node) == row && GridPane.getColumnIndex(node) != null && GridPane.getColumnIndex(node) == column) {
-                return node;
-            }
-        }
-        return null;
     }
 }
